--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,21 @@ body{
   display: flex;
   flex-direction: column;
 }
+
+.row{
+  flex: 33%;
+  display: flex;
+  flex-direction: row;
+}
+
+.square{
+  flex: 33%;
+  height: 100%;
+  border: 1px solid black;
+  cursor: pointer;
+  display: grid;
+  place-items: center;
+  font-size: 30px;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+}
